kuber-base/1.5/app/deployment_backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-15-back
spec:
  selector:
    matchLabels:
      app: app-1.5-back
  template:
    metadata:
      labels:
        app: app-1.5-back
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool:latest
          ports:
            - containerPort: 1180
              name: http-port
            - containerPort: 11443
              name: https-port
