kuber-base/1.5/app/deployment_frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-15-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-1.5-front
  template:
    metadata:
      labels:
        app: app-1.5-front
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
              name: nginx-port
