kuber-base/1.5/app/service_frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: srv-app15-front
spec:
  selector:
    app: app-1.5-front
  ports:
    - name: nginx-port
      protocol: TCP
      port: 80
      targetPort: 80
