kuber-base/1.5/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app15-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: srv-app15-front
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: srv-app15-back
                port:
                  number: 9002
